src/test/error/funccall.c
int func() {
    return "123";
}
int main() {
    func(1);
}
